--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,10 @@
+require:
+  - rubocop-rails
+  - rubocop-rake
+  - rubocop-rspec
+
 AllCops:
+  NewCops: enable
   TargetRubyVersion: 2.6
 
 Style/StringLiterals:
@@ -11,3 +17,6 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+Metrics/BlockLength:
+  IgnoredMethods: ["describe", "context"]
