--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,22 @@ require:
 
 AllCops:
   NewCops: enable
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.0
+  Exclude:
+    - bin/*
+    - config/**/*
+    - db/**/*
+    - deploy/*
+    - node_modules/**/*
+    - vendor/bundle/**/*
+    # Dummy app
+    - spec/dummy/*
+    - spec/dummy/bin/*
+    - spec/dummy/config/**/*
+    - spec/dummy/db/**/*
+    - spec/dummy/deploy/*
+    - spec/dummy/node_modules/**/*
+    - spec/dummy/vendor/bundle/**/*
 
 RSpec/ExampleLength:
   Enabled: false
