--- a/spec/dummy/.gitignore
+++ b/spec/dummy/.gitignore
@@ -3,7 +3,7 @@ capybara-*.html
 .rspec
 /db/*.sqlite3
 /db/*.sqlite3-journal
-/db/*.sqlite3-[0-9]*
+/db/*.sqlite3-*
 /public/system
 /coverage/
 /spec/tmp
