Set up system specs
Adds support for capybara with cuprite. Adds missing asset management gems for javascript.

--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -1,3 +1,12 @@
-test:
+default: &default
   adapter: sqlite3
-  database: <%= Rails.application.root.join("db/test.sqlite3") %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+
+development:
+  <<: *default
+  database: db/development.sqlite3
+
+test:
+  <<: *default
+  database: db/test.sqlite3
