Refactor towards Tables 3
* Implement a people/index example using turbo-morph
* Port system specs from Koi for robust testing of people/index
* Simply tests by using real models wherever possible
* Clean up some tech debt and get tests passing again

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ require:
   - rubocop-capybara
   - rubocop-katalyst
   - rubocop-factory_bot
+  - rubocop-rspec_rails
 
 AllCops:
   NewCops: enable
