Churn: update dependencies

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,6 +2,9 @@
 
 source "https://rubygems.org"
 
-gem "github-pages"
+# Temporary pin, see https://github.com/jekyll/jekyll-commonmark/issues/61
+ruby "< 4.0"
+
+gem "github-pages", ">= 232"
 gem "just-the-docs"
 gem "webrick"
